@@ -25,7 +25,7 @@
 {\listlevel\levelnfc23\levelnfcn23\leveljc0\leveljcn0\levelfollow0\levelstartat1\levelspace360\levelindent0{\leveltext\leveltemplateid67567621\'01\u-3929 ?;}{\levelnumbers;}\f14\chbrdr\brdrnone\brdrcf1 \chshdng0\chcfpat1\chcbpat1\fbias0 \fi-360\li6480
 \jclisttab\tx6480 }{\listname ;}\listid1281954221}}{\*\listoverridetable{\listoverride\listid-2\listoverridecount1{\lfolevel\listoverrideformat{\listlevel\levelnfc23\levelnfcn23\leveljc0\leveljcn0\levelfollow0\levelstartat0\levelold\levelspace0
 \levelindent0{\leveltext\'01\u-3913 ?;}{\levelnumbers;}\f3\chbrdr\brdrnone\brdrcf1 \chshdng0\chcfpat1\chcbpat1\fbias0 }}\ls1}{\listoverride\listid1281954221\listoverridecount0\ls2}}{\info{\title CrystalSpace Win32 libraries}{\author res}{\operator res}
-{\creatim\yr2011\mo1\dy27\hr15\min33}{\revtim\yr2014\mo4\dy26\hr21\min37}{\version44}{\edmins0}{\nofpages2}{\nofwords503}{\nofchars2870}{\nofcharsws0}{\vern8203}}\margl1417\margr1417\margt1417\margb1134 
+{\creatim\yr2011\mo1\dy27\hr15\min33}{\revtim\yr2014\mo4\dy26\hr22}{\version45}{\edmins0}{\nofpages2}{\nofwords503}{\nofchars2870}{\nofcharsws0}{\vern8203}}\margl1417\margr1417\margt1417\margb1134 
 \widowctrl\ftnbj\aendnotes\hyphhotz425\aftnnar\noxlattoyen\expshrtn\noultrlspc\dntblnsbdb\nospaceforul\hyphcaps0\horzdoc\dghspace120\dgvspace120\dghorigin1701\dgvorigin1984\dghshow0\dgvshow3\jcompress\viewkind4\viewscale100\nolnhtadjtbl \fet0\sectd 
 \linex0\sectdefaultcl {\*\pnseclvl1\pnucrm\pnstart1\pnindent720\pnhang{\pntxta .}}{\*\pnseclvl2\pnucltr\pnstart1\pnindent720\pnhang{\pntxta .}}{\*\pnseclvl3\pndec\pnstart1\pnindent720\pnhang{\pntxta .}}{\*\pnseclvl4\pnlcltr\pnstart1\pnindent720\pnhang
 {\pntxta )}}{\*\pnseclvl5\pndec\pnstart1\pnindent720\pnhang{\pntxtb (}{\pntxta )}}{\*\pnseclvl6\pnlcltr\pnstart1\pnindent720\pnhang{\pntxtb (}{\pntxta )}}{\*\pnseclvl7\pnlcrm\pnstart1\pnindent720\pnhang{\pntxtb (}{\pntxta )}}{\*\pnseclvl8
@@ -60,7 +60,7 @@ versions of the package can not be installed at the same time.
 . There is a hotfix available from Microsoft to address the issue: }{\field{\*\fldinst {\f1\fs18\lang1033\langfe1031\langnp1033  HYPERLINK "http://support.microsoft.com/kb/949009/" }{\f1\fs18\lang1033\langfe1031\langnp1033 {\*\datafield 
 00d0c9ea79f9bace118c8200aa004ba90b02000000170000002800000068007400740070003a002f002f0073007500700070006f00720074002e006d006900630072006f0073006f00660074002e0063006f006d002f006b0062002f003900340039003000300039002f000000e0c9ea79f9bace118c8200aa004ba90b6800
 000068007400740070003a002f002f0073007500700070006f00720074002e006d006900630072006f0073006f00660074002e0063006f006d002f006b0062002f003900340039003000300039002f000000795881f43b1d7f48af2c825dc485276300000000a5ab0000000000000000000000000000000000000000000000
-0000000000000000000000000000}}}{\fldrslt {\cs18\f1\fs18\ul\cf2\lang1033\langfe1031\langnp1033 http://support.microsoft.com/kb/949009/}}}{\f1\fs18\lang1033\langfe1031\langnp1033 
+000000000000000000000000000000}}}{\fldrslt {\cs18\f1\fs18\ul\cf2\lang1033\langfe1031\langnp1033 http://support.microsoft.com/kb/949009/}}}{\f1\fs18\lang1033\langfe1031\langnp1033 
 \par }\pard \ql \li0\ri0\nowidctlpar\faauto\ilvl12\rin0\lin0\itap0 {\f1\fs18\lang1033\langfe1031\langnp1033 @END_STATICONLY@
 \par }{\b\f1\fs18\ul\lang1033\langfe1031\langnp1033 What's in here}{\f1\fs18\lang1033\langfe1031\langnp1033 
 \par This package currently includes:
@@ -81,7 +81,7 @@ versions of the package can not be installed at the same time.
 \f1\fs18\lang1033\langfe1031\langnp1033 Jam 2.5rc3{\*\bkmkstart Jam}}{\field{\*\fldinst {\f1\fs18\lang1033\langfe1031\super\langnp1033  SEQ Changes \\* MERGEFORMAT }}{\fldrslt {\f1\fs18\lang1024\langfe1024\super\noproof\langnp1033 2}}}{
 \f1\fs18\lang1033\langfe1031\langnp1033 {\*\bkmkend Jam}
 \par {\pntext\pard\plain\f3\fs18\lang1033\langfe1031\langnp1033 \loch\af3\dbch\af0\hich\f3 \'b7\tab}}\pard \ql \fi-720\li720\ri0\nowidctlpar{\*\pn \pnlvlblt\ilvl0\ls1\pnrnot0\pnf3 {\pntxtb \'b7}}\faauto\ls1\rin0\lin720\itap0 {
-\f1\fs18\lang1033\langfe1031\langnp1033 jpeglib 8d
+\f1\fs18\lang1033\langfe1031\langnp1033 jpeglib 9a
 \par {\pntext\pard\plain\f3\fs18\lang1040\langfe1031\langnp1040 \loch\af3\dbch\af0\hich\f3 \'b7\tab}}\pard \ql \fi-720\li720\ri0\nowidctlpar{\*\pn \pnlvlblt\ilvl0\ls1\pnrnot0\pnf3 {\pntxtb \'b7}}\faauto\ls1\rin0\lin720\itap0 {
 \f1\fs18\lang1040\langfe1031\langnp1040 lib3ds 1.3.0
 \par {\pntext\pard\plain\f3\fs18\lang1040\langfe1031\langnp1040 \loch\af3\dbch\af0\hich\f3 \'b7\tab}}\pard \ql \fi-720\li720\ri0\nowidctlpar{\*\pn \pnlvlblt\ilvl0\ls1\pnrnot0\pnf3 {\pntxtb \'b7}}\faauto\ls1\rin0\lin720\itap0 {
@@ -120,19 +120,19 @@ versions of the package can not be installed at the same time.
 \par }{\field{\*\fldinst {\f1\fs18\lang1033\langfe1031\langnp1033  REF mng2  }}{\fldrslt {\f1\fs18\lang1024\langfe1024\super\noproof\langnp1040 4}}}{\f1\fs18\lang1033\langfe1031\langnp1033 
  A bunch of the MNG_SKIP* defines has been invoked for libmng to remove some features unneeded by CS.
 \par }{\field{\*\fldinst {\f1\fs18\lang1033\langfe1031\langnp1033  REF ode \\h }{\f1\fs18\lang1033\langfe1031\langnp1033 {\*\datafield 
-08d0c9ea79f9bace118c8200aa004ba90b0200000008000000040000006f006400650000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000}}}{\fldrslt {\f1\fs18\lang1024\langfe1024\super\noproof\langnp1040 5}}}{
+08d0c9ea79f9bace118c8200aa004ba90b0200000008000000040000006f00640065000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000}}}{\fldrslt {\f1\fs18\lang1024\langfe1024\super\noproof\langnp1040 5}}}{
 \f1\fs18\lang1033\langfe1031\langnp1033  ODE was changed to not abort() or exit() the program when some internal error occurs.
 \par }{\field{\*\fldinst {\f1\fs18\lang1033\langfe1031\langnp1033  REF oal_soft \\h }{\f1\fs18\lang1033\langfe1031\langnp1033 {\*\datafield 
-08d0c9ea79f9bace118c8200aa004ba90b0200000008000000090000006f0061006c005f0073006f006600740000000000000000000000000000000000000000000000000000000000000000000000}}}{\fldrslt {\f1\fs18\lang1024\langfe1024\super\noproof\langnp1033 6}}}{
+08d0c9ea79f9bace118c8200aa004ba90b0200000008000000090000006f0061006c005f0073006f00660074000000000000000000000000000000000000000000000000000000000000000000000000}}}{\fldrslt {\f1\fs18\lang1024\langfe1024\super\noproof\langnp1033 6}}}{
 \f1\fs18\lang1033\langfe1031\langnp1033  See the \'93Deploying Applications\'94 document on instructions how to make use of it.\line }{\field{\*\fldinst {\f1\fs18\lang1033\langfe1031\langnp1033  REF assimp \\h }{\f1\fs18\lang1033\langfe1031\langnp1033 
-{\*\datafield 08d0c9ea79f9bace118c8200aa004ba90b02000000080000000700000061007300730069006d007000000000}}}{\fldrslt {\f1\fs18\lang1024\langfe1024\super\noproof\langnp1033 7}}}{\f1\fs18\lang1033\langfe1031\langnp1033 
+{\*\datafield 08d0c9ea79f9bace118c8200aa004ba90b02000000080000000700000061007300730069006d00700000000000}}}{\fldrslt {\f1\fs18\lang1024\langfe1024\super\noproof\langnp1033 7}}}{\f1\fs18\lang1033\langfe1031\langnp1033 
  The Open Asset Import Library was build without export support, as this feature is currently not used by CS.
-\par }{\field{\*\fldinst {\f1\fs18\lang1033\langfe1031\langnp1033  REF wx \\h }{\f1\fs18\lang1033\langfe1031\langnp1033 {\*\datafield 08d0c9ea79f9bace118c8200aa004ba90b02000000080000000300000077007800000000}}}{\fldrslt {
+\par }{\field{\*\fldinst {\f1\fs18\lang1033\langfe1031\langnp1033  REF wx \\h }{\f1\fs18\lang1033\langfe1031\langnp1033 {\*\datafield 08d0c9ea79f9bace118c8200aa004ba90b0200000008000000030000007700780000000000}}}{\fldrslt {
 \f1\fs18\lang1024\langfe1024\super\noproof\langnp1033 8}}}{\f1\fs18\lang1033\langfe1031\langnp1033  For MSVC, most, but not all, WX libraries are shipped. The libraries are sufficient to build CS\rquote 
  WX plugin, WX sample application and cseditor. If you need more WX libs, feel free to drop a request to }{\field{\*\fldinst {\f1\fs18\lang1033\langfe1031\langnp1033  HYPERLINK "mailto:res@crystalspace3d.org" }{\f1\fs18\lang1033\langfe1031\langnp1033 
 {\*\datafield 
 00d0c9ea79f9bace118c8200aa004ba90b02000000170000001700000072006500730040006300720079007300740061006c0073007000610063006500330064002e006f00720067000000e0c9ea79f9bace118c8200aa004ba90b540000006d00610069006c0074006f003a00720065007300400063007200790073007400
-61006c0073007000610063006500330064002e006f00720067000000795881f43b1d7f48af2c825dc485276300000000a5ab00000000000000000000000000000000000000000000000000000000000000000000000000000000000000}}}{\fldrslt {\cs18\f1\fs18\ul\cf2\lang1033\langfe1031\langnp1033 
+61006c0073007000610063006500330064002e006f00720067000000795881f43b1d7f48af2c825dc485276300000000a5ab0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000}}}{\fldrslt {\cs18\f1\fs18\ul\cf2\lang1033\langfe1031\langnp1033 
 res@crystalspace3d.org}}}{\f1\fs18\lang1033\langfe1031\langnp1033 .
 \par 
 \par }{\b\f1\fs18\ul\lang1033\langfe1031\langnp1033 Build notes}{\f1\fs18\lang1033\langfe1031\langnp1033 
